# src/api/docs/swagger.yaml
@@ -365,13 +365,17 @@ paths:
     get:
       consumes:
         - application/json
-      description: Fetch an author by ID
+      description: Get an author by its ID or secondary ID
       parameters:
-        - description: Author ID
+        - description: Author ID or Secondary ID
           in: path
           name: id
           required: true
           type: string
+        - description: Use secondary ID
+          in: query
+          name: secondary
+          type: boolean
       produces:
         - application/json
       responses:
@@ -391,19 +395,23 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.APIResponse'
-      summary: Get Author by ID
+      summary: Get an author
       tags:
         - Author
     patch:
       consumes:
         - application/json
-      description: Update an author by its ID
+      description: Update an author by its ID or secondary ID
       parameters:
-        - description: Author ID
+        - description: Author ID or Secondary ID
           in: path
           name: id
           required: true
           type: string
+        - description: Use secondary ID
+          in: query
+          name: secondary
+          type: boolean
         - description: Update Author Request
           in: body
           name: req
@@ -419,6 +427,10 @@ paths:
             $ref: '#/definitions/response.APIResponse'
         '400':
           description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        '404':
+          description: Not Found
           schema:
             $ref: '#/definitions/response.APIResponse'
         '500':
@@ -557,17 +569,13 @@ paths:
     patch:
       consumes:
         - application/json
-      description: Update a book by its ID or secondary ID
+      description: Update a book by its ID
       parameters:
-        - description: Book ID or Secondary ID
+        - description: Book ID
           in: path
           name: id
           required: true
           type: string
-        - description: Use secondary ID
-          in: query
-          name: secondary
-          type: boolean
         - description: Update Book Request
           in: body
           name: req
@@ -714,13 +722,17 @@ paths:
     get:
       consumes:
         - application/json
-      description: Get a category by its ID
+      description: Get a category by its ID or secondary ID
       parameters:
-        - description: Category ID
+        - description: Category ID or Secondary ID
           in: path
           name: id
           required: true
           type: string
+        - description: Use secondary ID
+          in: query
+          name: secondary
+          type: boolean
       produces:
         - application/json
       responses:
@@ -1156,13 +1168,17 @@ paths:
     get:
       consumes:
         - application/json
-      description: Get a seller by its ID
+      description: Get a seller by its ID or secondary ID
       parameters:
-        - description: Seller ID
+        - description: Seller ID or Secondary ID
           in: path
           name: id
           required: true
           type: string
+        - description: Use secondary ID
+          in: query
+          name: secondary
+          type: boolean
       produces:
         - application/json
       responses:
@@ -1188,13 +1204,17 @@ paths:
     patch:
       consumes:
         - application/json
-      description: Update a seller by its ID
+      description: Update a seller by its ID or secondary ID
       parameters:
-        - description: Seller ID
+        - description: Seller ID or Secondary ID
           in: path
           name: id
           required: true
           type: string
+        - description: Use secondary ID
+          in: query
+          name: secondary
+          type: boolean
         - description: Update Seller Request
           in: body
           name: req
